--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,3 +49,51 @@ nav .seccion img {
     border-radius: 50px;
     margin-left: 10px;
 }
+
+
+/*Contenido principal*/
+
+
+/*seccion 1*/
+
+main {
+    margin-top: 150px;
+    text-align: center;
+}
+
+main .seccion1 {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+
+/*fin de seccion 1*/
+
+
+/*seccion 2*/
+
+main .secion2 {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+.principal {
+    width: 525px;
+    border-radius: 100px;
+    border: 1px solid rgb(223, 225, 229);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.principal input {
+    width: 450px;
+    height: 40px;
+    border: none;
+    outline: none;
+}
+
+
+/*fin de seccion 2*/
