--- a/css/estilos.css
+++ b/css/estilos.css
@@ -121,3 +121,35 @@ main .principal input:hover {
 
 
 /*fin de seccion 2*/
+
+
+/*seccion 3*/
+
+main .seccion3 {
+    width: 530px;
+    margin: 0 auto;
+}
+
+main .seccion3 div {
+    display: inline-block;
+}
+
+main .seccion3 button {
+    height: 36px;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 14px;
+}
+
+main .seccion3 button:hover {
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px #000001;
+    color: rgb(5, 1, 1);
+}
+
+
+/*fin de seccion 3*/
